@@ -1,3 +1,7 @@
+2010-04-10 michaudm <michael.michaud@free.fr>
+    improved UnionByAttribute adding better warnings and output messages if
+    invalid geometries are found (may slow down the whole process)
+
 2010-04-07 michaudm <michael.michaud@free.fr>
     improved ExplodeSelectedFeatures performance avoiding to clone many
     coordinates uselessly (where many means, for each GeometryCollection, total
